linked lihat semua to explore.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="row">
                     <h3 class="font-weight-bold ml-3"> Popular <span class="text-theme"> Barber's</span> </h3>
                     <div class="ml-auto">
-                      <a href="" class="text-theme text-decoration-none">Lihat semua <i data-feather="chevron-right"></i> </a>
+                      <a href="explore.html" class="text-theme text-decoration-none">Lihat semua <i data-feather="chevron-right"></i> </a>
                     </div>
                 </div>
                 <div class="row mt-3">
