create update_password.html, riwayat.html and update_profile.html

--- a/success-order.html
+++ b/success-order.html
@@ -24,14 +24,14 @@
                   </div>
               </a>
                   <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="update_profile.html">
                           <i class="dropdown-icon" data-feather="user"></i> Profile
                       </a>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="riwayat.html">
                           <i class="dropdown-icon" data-feather="check-circle"></i> Riwayat
                       </a>
-                      <a class="dropdown-item" href="#">
-                          <i class="dropdown-icon" data-feather="settings"></i> Settings
+                      <a class="dropdown-item" href="update_password.html">
+                          <i class="dropdown-icon" data-feather="lock"></i> Update Password
                       </a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="login.html">
@@ -53,14 +53,14 @@
                         </div>
                     </a>
                         <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="update_profile.html">
                                 <i class="dropdown-icon" data-feather="user"></i> Profile
                             </a>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="riwayat.html">
                                 <i class="dropdown-icon" data-feather="check-circle"></i> Riwayat
                             </a>
-                            <a class="dropdown-item" href="#">
-                                <i class="dropdown-icon" data-feather="settings"></i> Settings
+                            <a class="dropdown-item" href="update_password.html">
+                                <i class="dropdown-icon" data-feather="lock"></i> Update Password
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="login.html">
@@ -75,8 +75,7 @@
       </nav>
   </section>
 
-      <!-- Success Order Section -->
-      <section class="success-order">
+    <section class="success-order">
         <div class="container mt-5">
             <div class="row">
                 <img src="img/ilustration/success-order.svg" class="mx-auto" width="360" alt="">
@@ -84,9 +83,8 @@
             <h4 class="text-center font-weight-bold mt-3">Yeay, Booking Berhasil</h4>
             <h4 class="text-center font-weight-bold">Cek email kamu ya!</h4>
         </div>
-      </section>
+    </section>
 
-    <!-- Footer Section -->
     <section class="footer bg-section pt-5">
         <div class="container">
             <div class="row">
