add field id booking table

--- a/riwayat.html
+++ b/riwayat.html
@@ -106,6 +106,7 @@
                         <thead>
                             <tr role="row">
                                 <th>No</th>
+                                <th>ID Booking</th>
                                 <th>Barber</th>
                                 <th>Paket</th>
                                 <th>Total</th>
@@ -116,6 +117,7 @@
                         <tbody>
                             <tr>
                                 <th scope="col">1</th>
+                                <td>BK-301220</td>
                                 <td>Hairneds Studio</td>
                                 <td>Paket Basic</td>
                                 <td>Rp. 10.000</td>
@@ -126,6 +128,7 @@
                             </tr>
                             <tr>
                                 <th scope="col">2</th>
+                                <td>BK-251120</td>
                                 <td>Overgass Store</td>
                                 <td>Paket Gold</td>
                                 <td>Rp. 35.000</td>
@@ -136,6 +139,7 @@
                             </tr>
                             <tr>
                                 <th scope="col">3</th>
+                                <td>BK-110620</td>
                                 <td>Lucky Barber</td>
                                 <td>Paket Basic</td>
                                 <td>Rp. 15.000</td>
