--- a/booking.html
+++ b/booking.html
@@ -155,7 +155,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-sm-7">
-                        <a href="success-order.html" class="btn btn-color-theme btn-block p-2">Booking</a>
+                        <a href="success_order.html" class="btn btn-color-theme btn-block p-2">Booking</a>
                         </div>
                     </div>
                 </form>
